# distributed_training_by_ray

./: README.md  pyproject.toml  requirements.txt  vertex_train.py
src/parallel_training/: start_process.py
src/patrain/: etl.py  main_training.py  models.py  trainer.py
src/patrain/other/: parallel_training.py
