[build-system]
requires = ["setuptools>=61.0.0", "wheel","hatchling"]
build-backend = "setuptools.build_meta"

[project]
name = "patrain"
version = "0.0.1"
description = "parallel training"
readme = "README.md"
authors = [
    {name = "Vikash Singh", email = "vikash.singh@linuxmail.org"},
]

requires-python = ">=3.11"

dependencies = [
    "ray>=2.0.0",
    "scikit-learn>=1.0.0",
    "pandas>=1.3.0",
    "numpy>=1.19.0",
    "joblib>=1.1.0"
]

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*"]

[tool.setuptools.package-data]
"your_package" = ["*.json", "*.yaml"]


[project.optional-dependencies]
test = ["pytest>=6.0.0"]
dev = ["black", "flake8"]

[project.scripts]
patrain = "patrain.main:main"

# for running test case

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests"
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"


# code Quality and manitanability

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv"
]

[tool.mypy]
python_version = 3.11
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
strict = true
exclude = "build|dist|/.venv"


